update LoginWindow.java in dark mode Update GraphWindow.java to show an alert when a book has no sessions